# fuelmate-api

./: Dockerfile  pyproject.toml
app/: main.py
app/auth/: dependencies.py  service.py
app/config/: supabase.py
app/routes/: auth.py
app/schemas/: login.py  register.py
app/services/: dependencies.py
